--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
 <a href="1.%20Introduction.html">1. Introduction</a>
 <a href="2.%20Python%20Basics.html">2. Python Basics</a>
+<a href="3.%20Data%20Structures.html">3. Data Structures</a>
