--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
-<a href="1.%20Introduction.html">1. Introduction</a>
-<a href="2.%20Python%20Basics.html">2. Python Basics</a>
-<a href="3.%20Data%20Structures.html">3. Data Structures</a>
+
+<p><a href="1.%20Introduction.html">1. Introduction</a> <br>
+<a href="2.%20Python%20Basics.html">2. Python Basics</a> <br>
+<a href="3.%20Data%20Structures.html">3. Data Structures</a> <br>
+<a href="4.%20Data%20Structures%202.html">4. Data Structures</a> <br>
+<a href="5.%20Functions.html">5. Functions</a> <br>
+<a href="6.%20Modules.html">6. Modules</a> <br>
+<a href="7.%20File%20Handling%20and%20Exceptions.html">7.File Handling and Exceptions</a> <br>
+</p>
